fix_rubocop_errors

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,13 @@ Metrics/MethodLength:
 AllCops:
   Exclude:
     - config/initializers/secret_token.rb
+
+Style/SymbolArray:
+  Enabled: true
+  EnforcedStyle: brackets
+
+Style/RegexpLiteral:
+  Enabled: false
+
+StringLiterals:
+  Enabled: false
